# rust-embedded-cli-test-1

./: Cargo.toml  Embed.toml  memory.x
.cargo/: config.toml
embedded_cli/: Cargo.toml
embedded_cli/src/: lib.rs
embedded_cli_test/: Cargo.toml
embedded_cli_test/src/: main.rs  menu.rs
