[package]
name = "embedded_cli_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded_cli = { path = "../embedded_cli" }
rtic = { version = "2.0", features = ["thumbv7-backend"] }
rtic-monotonics = { version = "1.0", features = ["cortex-m-systick"] }
embedded-hal = "0.2"
panic-rtt-target = { version = "0.1", features = ["cortex-m"] }
rtt-target = { version = "0.4" }
stm32f4xx-hal = { version = "0.16", features = ["stm32f411", "rt"] }
heapless = "0.7"
panic-reset = "0.1"


[profile.release]
debug = 2
strip = false
opt-level = "z"
lto = true
codegen-units = 1
overflow-checks = false
incremental = false

[profile.dev]
debug = 2
strip = false
opt-level = 0
lto = false
codegen-units = 1
overflow-checks = true
incremental = true
